<resources>
    <string name="app_name">YCF_customView</string>

    <string name="label_billSK_one">1</string>
    <string name="label_billSK_two">2</string>
    <string name="label_billSK_three">3</string>
    <string name="label_billSK_four">4</string>
    <string name="label_billSK_five">5</string>
    <string name="label_billSK_six">6</string>
    <string name="label_billSK_seven">7</string>
    <string name="label_billSK_eight">8</string>
    <string name="label_billSK_nine">9</string>
    <string name="label_billSK_zero">0</string>
    <string name="label_billSK_dot">.</string>
    <string name="label_billSK_backspace">DEL</string>
    <string name="label_billSK_add">+</string>
    <string name="label_billSK_ok">OK</string>
    <string name="label_billSK_equal">=</string>

</resources>
