<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_one"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_one"/>

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_four"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_four"/>

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_seven"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_seven"/>

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_zero"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_zero"/>

        </LinearLayout>

        <View style="@style/Line"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_two"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_two"/>

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_five"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_five"/>

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_eight"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_eight"/>

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_dot"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_dot"/>
        </LinearLayout>

        <View style="@style/Line"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_three"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_three"/>

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_six"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_six"/>

            <View style="@style/Line"/>

            <TextView
                android:id="@+id/billSK_nine"
                style="@style/Widget_Item"
                android:text="@string/label_billSK_nine"/>

            <View style="@style/Line"/>

            <LinearLayout
                android:id="@+id/billSK_currencyWrapper"
                style="@style/Widget_Item"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/billSK_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/billSK_currencyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
